# hypermodern-sethon

./: .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst  reference.rst
src/hypermodern_sethon/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
