[tool.poetry]
name = "hypermodern-sethon"
version = "0.1.0"
description = ""
authors = ["Seth Carter <seth.carter@cd-adapco.com>"]

[tool.poetry.scripts]
hypermodern-sethon = "hypermodern_sethon.console:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
