[tool.poetry]
name = "hypermodern-sethon"
version = "0.1.0"
description = ""
authors = ["Seth Carter <seth.carter@cd-adapco.com>"]

[tool.poetry.scripts]
hypermodern-sethon = "hypermodern_sethon.console:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.27.1"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}
typing-extensions = "^4.2.0"
desert = "^2020.11.18"
marshmallow = "^3.16.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^3.7.9"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.960"
pytype = {version = "^2022.5.19", python = "3.7"}
typeguard = "^2.13.3"
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.0.0"
Sphinx = "^5.0.1"
sphinx-autodoc-typehints = "^1.18.2"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_sethon"]

[tool.coverage.report]
show_missing = true
fail_under = 100
